Adjustments of MCTS and related content to match ICAPS requirements